src/app/styles/series-table.scss
@import 'variables';

$horizontal-cell-padding: $spacing-xxs;

.series-table {

  mat-row {
    $bg-intensity: .5;

    &.completed,
    &.rewatching {
      $color: map-get($mat-blue, 50);
      background: rgba($color, $bg-intensity);
    }
    &.planned,
    &.watching,
    &.paused {
      $color: map-get($mat-orange, 50);
      background: rgba($color, $bg-intensity);
    }
    &.dropped {
      $color: map-get($mat-red, 50);
      background: rgba($color, $bg-intensity);
    }

    mat-header-cell,
    mat-cell {
      &:not(.mat-column-cover-image) {
        $vertical-padding: $spacing-xxxxs;
        padding-left: $vertical-padding;
        padding-right: $vertical-padding;
      }
    }

    mat-cell {
      padding: $spacing-xxxs 0;
    }
  }

  .mat-column-actions {
    overflow: visible;
    font-size: 0;

    .menu-toggle {
      $size: $spacing-s;
      width: $size;
      margin-left: -$size;
      font-size: $font-size-m;
      text-align: center;
      vertical-align: bottom;
    }

  }

  .mat-column-episodes {
    .duration-icon {
      $cell-padding: $spacing-xxxxs;
      line-height: $font-size-m * 1.25;
      float: right;
    }
  }

  .mat-column-title-romaji {
    overflow: visible;
    display: flex;
    align-items: center;

    .favourite {
      margin-left: auto;

      @media (min-width: #{$screen-xxxs + 1}) {
        margin-right: $spacing-xxxs;
      }
      @media (max-width: $screen-xxxs) {
        margin-right: -$spacing-xs;
      }
    }
  }

  .mat-column-genres {
    mat-list {
      padding: 0;

      mat-list-item {
        height: $spacing-s;

        .mat-list-item-content {
          padding: 0;

          .mat-chip {
            &.rounded {
              $height: 19px;
              line-height: $height;
              border-radius: $height / 2;
              padding: 0 $spacing-xxs;
            }
          }
        }
      }
    }
  }

  .mat-column-cover-image {
    font-size: 0;

    img.cover {
      height: auto;

      @media (min-width: $screen-xxs + 1) {
        max-width: 88px;
      }
      @media (max-width: $screen-xxs) {
        max-width: 48px;
      }
    }
  }

  @media (max-width: $screen-xxs) {
    $actions-column-width: 40px;

    .mat-header-row,
    .mat-row {
      padding: 0 $spacing-s 0 $actions-column-width;
    }

    .mat-column-actions {
      .menu-toggle {
        width: $actions-column-width;
        margin-left: -$actions-column-width;
        font-size: $spacing-s;
      }
    }
  }


  /* columns */

  .mat-column-actions {
    flex: 0;
  }

  @media (min-width: $screen-m + 1) {
    .mat-column-cover-image {
      flex: .8;
    }
    .mat-column-title-romaji {
      flex: 4;
    }
    .mat-column-format {
      flex: .55;
    }
    .mat-column-start-date {
      flex: .4;
    }
    .mat-column-genres {
      flex: .95;
    }
    .mat-column-score {
      flex: .45;
    }
    .mat-column-episodes {
      flex: .6;
    }
  }

  @media (max-width: $screen-m) {
    .mat-column-cover-image {
      flex: 1.55;
    }
    .mat-column-title-romaji {
      flex: 4;
    }
    .mat-column-format {
      flex: .95;
    }
    .mat-column-start-date {
      flex: .7;
    }
    .mat-column-genres {
      flex: 1.75;
    }
    .mat-column-score {
      flex: .8;
    }
    .mat-column-episodes {
      flex: 1.1;
    }
  }

  @media (max-width: $screen-s) {
    .mat-column-start-date,
    .mat-column-genres,
    .mat-column-score,
    .mat-column-episodes {
      display: none;
    }

    .mat-column-cover-image {
      flex: 1.05;
    }
    .mat-column-format {
      flex: 0.65;
    }
  }

  @media (max-width: $screen-xs) {
    .mat-column-cover-image {
      flex: 1.5;
    }
    .mat-column-format {
      flex: .9;
    }
  }

  @media (max-width: $screen-xxs) {
    .mat-column-cover-image {
      flex: 1.5;
    }
    .mat-column-format {
      flex: 1.6;
    }
  }

  @media (max-width: $screen-xxxs) {
    .mat-column-cover-image,
    .mat-column-format {
      display: none;
    }
  }

}

